--- a/svelte-ui/src/app.css
+++ b/svelte-ui/src/app.css
@@ -1,18 +1,39 @@
+@font-face {
+  font-family: 'SourceHanSansCN';
+  src: url('../public/SourceHanSansHWSC-VF.otf.woff2');
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Sans';
+  src: url('../public/PlusJakartaSans[wght].ttf');
+}
+
+img {
+  pointer-events: none;
+}
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Plus Jakarta Sans, SourceHanSansCN;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  /* 禁止选中文本 */
+  -webkit-user-select: none;
+  user-select: none;
+  /* 禁止拖动 */
+  -webkit-user-drag: none;
 
+  cursor: default;
+
+  overflow: hidden;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  text-size-adjust: 100%;
+  /* font-synthesis: none; */
+  text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
 }
 
 a {
@@ -20,6 +41,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -27,9 +49,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* place-items: center; */
+  /* min-width: 708px;
+  min-height: 1120px; */
 }
 
 h1 {
@@ -44,27 +66,17 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 45px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border: none;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -72,9 +84,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
